[package]
authors = ["Nicholas Dujay <nickdujay@gmail.com>"]
name = "hanabi-api-server"
version = "0.1.0"

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
rocket_cors = "0.2.1"
serde = "1.0.27"
serde_derive = "1.0.27"

[dependencies.uuid]
features = [
    "serde",
    "v4",
]
version = "0.5.1"
